[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-floodmaps"
description = "A Python package for generating global flood maps using an ensemble of DEM datasets."
dynamic = ["version"]
dependencies = [
    "asf-search",
    "geopandas",
    "gdal",
    "psutil",
    "shapely",
    "shutil",
    "tqdm",
    "xarray",
    "zarr"
]
authors = [
    {name = "L. Ricky Rosas", email = "lrr43@byu.edu"}
]
maintainers = [
    {name = "L. Ricky Rosas", email = "lrr43@byu.edu"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.dynamic]
version = { attr = "global_floodmaps.__version__" }
